--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
+    "@octokit/rest": "^22.0.0",
     "@slack/web-api": "^7.9.3",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "chromium": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "marked": "^16.1.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "puppeteer-core": "^21.5.2",
     "reflect-metadata": "^0.1.13",
